--- a/config-client/src/main/resources/application.yml
+++ b/config-client/src/main/resources/application.yml
@@ -1,9 +1,11 @@
+server:
+  port: 8080
 spring:
   application:
     name: config-client
   cloud:
     config:
-      uri: http://192.168.1.110:8769
+      uri: http://192.168.101.29:8769
       fail-fast: true
   profiles:
     active: dev
@@ -11,7 +13,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://192.168.1.110:8520/eureka/
+      defaultZone: http://admin:admin123@eureka.sulin.online:8520/eureka/
 
 
 #spring.application.name=config-client
@@ -21,4 +23,5 @@ eureka:
 
 #eureka.client.serviceUrl.defaultZone=http://localhost:8889/eureka/
 #spring.cloud.config.discovery.enabled=true
+
 #spring.cloud.config.discovery.serviceId=config-server
