--- a/zuul-client/src/main/resources/application.yml
+++ b/zuul-client/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://192.168.1.110:8520/eureka/
+      defaultZone: http://admin:admin123@eureka.sulin.online:8520/eureka/
 server:
   port: 5000
 spring:
