--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -12,14 +12,15 @@ spring:
     sampler:
       percentage: 1.0
   zipkin:
-    base-url: http://localhost:9411
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
+#    base-url: http://localhost:9411
+    base-url: http://192.168.101.29:9411
+#  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    username: guest
+#    password: guest
 zuul:
   routes:
     api-a:
-      path: /user/**
+      path: /user-api/**
       serviceId: user-service
