--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -9,8 +9,7 @@ spring:
   application:
     name: user-service
   zipkin:
-    base-url: http://localhost:9411
-
+    base-url: http://192.168.101.29:9411
   sleuth:
     sampler:
       percentage: 1.0
