--- a/zipkin-service/src/main/resources/application.yml
+++ b/zipkin-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://admin:admin123@eureka.sulin.online:8520/eureka/
+      defaultZone: http://192.168.101.213:8889/eureka/
 management:
   metrics:
     web:
