--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -12,8 +12,14 @@ spring:
     sampler:
       percentage: 1.0
   zipkin:
-#    base-url: http://localhost:9411
-    base-url: http://192.168.101.29:9411
+    base-url: http://localhost:9411
+    #    base-url: http://192.168.101.29:9411
+    boot:
+      admin:
+        client:
+          instance:
+          # prefer-ip: true
+          url: http://192.168.101.29:5001
 #  rabbitmq:
 #    host: localhost
 #    port: 5672
@@ -24,3 +30,28 @@ zuul:
     api-a:
       path: /user-api/**
       serviceId: user-service
+
+    api-b:
+      path: /V0/**
+      serviceId: eureka-client-one
+
+    api-c:
+      path: /V/**
+      serviceId: eureka-client
+    api-d:
+      path: /v1/**
+      serviceId: regionLocation_service
+
+logging:
+  file: "/logdata/gatewayservice/gatewayservice_run.log"
+#  file: "/logdata/gatewayservice/gatewayservice_run.log"
+
+
+management:
+  endpoints:
+    health:
+      show-details: always
+    web:
+      exposure:
+        base-path: /
+        include: '*'
