--- a/eureka-feign-client/pom.xml
+++ b/eureka-feign-client/pom.xml
@@ -79,6 +79,11 @@
             <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
             <version>1.4.7.RELEASE</version>
         </dependency>
+        <!-- 链路追踪 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
