--- a/turbine-service/src/main/resources/application.yml
+++ b/turbine-service/src/main/resources/application.yml
@@ -21,10 +21,12 @@ management:
       show-details: ALWAYS
 
 turbine:
-  app-config: service-hi,service-lucy
+#  app-config: service-hi,service-lucy
+  app-config: eureka-client,eureka-client-one,gateway-service,eureka-feign-client,operatorInstructions
   aggregator:
     clusterConfig: default
   clusterNameExpression: new String("default")
   combine-host: true
   instanceUrlSuffix:
     default: actuator/hystrix.stream
+
