--- a/turbine-service/src/main/resources/application.yml
+++ b/turbine-service/src/main/resources/application.yml
@@ -1,32 +1,3 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://admin:admin123@eureka.sulin.online:8520/eureka/
-server:
-  port: 8521
 spring:
-  application:
-    name: turbine-service
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-      cors:
-        allowed-origins: "*"
-        allowed-methods: "*"
-  endpoint:
-    health:
-      show-details: ALWAYS
-
-turbine:
-#  app-config: service-hi,service-lucy
-  app-config: eureka-client,eureka-client-one,gateway-service,eureka-feign-client,operatorInstructions
-  aggregator:
-    clusterConfig: default
-  clusterNameExpression: new String("default")
-  combine-host: true
-  instanceUrlSuffix:
-    default: actuator/hystrix.stream
-
+  profiles:
+    active: dev
