--- a/zipkin-service/src/main/resources/application.yml
+++ b/zipkin-service/src/main/resources/application.yml
@@ -1,18 +1,3 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://192.168.101.213:8889/eureka/
-management:
-  metrics:
-    web:
-      server:
-        auto-time-requests: false
-
-
-server:
-  port: 9411
 spring:
-  application:
-    name: zipkin-service
-  main:
-    allow-bean-definition-overriding: true
+  profiles:
+    active: dev
