--- a/eureka-client/src/main/resources/application.yml
+++ b/eureka-client/src/main/resources/application.yml
@@ -9,4 +9,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://admin:admin123@eureka.sulin.online:8520/eureka/
+      defaultZone: http://localhost:8520/eureka/
