--- a/eureka-monitor-client/src/main/resources/application.yml
+++ b/eureka-monitor-client/src/main/resources/application.yml
@@ -14,4 +14,4 @@ turbine:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://admin:admin123@eureka.sulin.online:8520/eureka/
+      defaultZone: http://localhost:8520/eureka/
